Flood figures restored

--- a/chapter_floodinundation.tex
+++ b/chapter_floodinundation.tex
@@ -230,7 +230,7 @@ Thus far, the analysis of the model output has concerned catchment wide hydrolog
 The Boscastle catchment simulations showed minimal variation in flood inundation extent. Simulations with gridded rainfall input did not result in substantially different predictions of floodwater inundation compared to those with uniform rainfall input. Both sets of simulations reflected the general extent of reported flood water extents \citep{wallingford2005flooding}. Simulations that allowed erosion to take place (\texttt{GRID\_TLIM} and \texttt{UNIFORM\_TLIM}) showed a slight difference in the variation of floodwater depths in the floodplain area, particularly in the vicinity of Boscastle village, where Figure \ref{fig_boscastle_2dplan_flood_ensemble_town} is centred on. In hydrological-only simulations, the deepest water depths were predicted to occur in the confines of the river channel, whereas in erosion-enabled simulations, there appeared to be a `smoothing' effect of water depths between the channel and the adjacent floodplain, suggesting that the channel geometry had altered during the flood event either by infilling from sediment from upstream or collapse of the adjacent river banks -- this effect is particularly evident in Figure \ref{fig_boscastle_2dplan_flood_ensemble_confluence}. Post-event reports of the Boscastle flood noted that the river channel in the Boscastle village area had indeed been inundated with debris during the storm, which had potentially contributed to the extent of the flooding within the village. The debris blockage of the  river channel as it flowed under the road bridge in the centre of the village was also noted as a potential contributory factor to the pattern of flood inundation during the storm. Overall, the results from the Boscastle simulations indicate that while the general differences in flood extent are minimal, there are small localised variations in the distribution of flood water depths at key locations, which can be attributed to the parameterisation of erosional processes in the simulations (Figure \ref{fig_boscastle_2dplan_flood_ensemble_town} and \ref{fig_boscastle_2dplan_flood_ensemble_confluence}).
 
 \subsubsection{Ryedale}
-The Ryedale simulations showed greater variation in flood extent between the gridded rainfall and uniform rainfall inputs. The flood extents were greater in the gridded rainfall input simulations, corresponding with the higher peak discharges predicted in these simulations.  The variation in water depths appeared to be less sensitive in comparison to the Boscastle simulations. In the lower reaches of the catchment (Figure \ref{fig_ryedale_2dplan_flood_ensemble_town}), there appeared to be little indication that flood extents or water depths were sensitive to the erosion parameterisation, in contrast to the Boscastle simulations.
+The Ryedale simulations showed less variation in flood extents between the gridded rainfall and uniform rainfall inputs. The flood extents were only slightly greater in the gridded rainfall input simulations, despite the much higher peak discharges predicted in these simulations (Figure \ref{fig_ryedale_hydrograph_ensemble}). The main areas where flood extents were greater were in the floodplain area south of Helmsley (Figure \ref{fig_ryedale_2dplan_flood_ensemble_floodplain}) and in certain places around the settlement of Helmsley (Figure \ref{fig_ryedale_2dplan_flood_ensemble_town}).  The variation in water depths appeared to be less sensitive in comparison to the Boscastle simulations. In the lower reaches of the catchment (Figure \ref{fig_ryedale_2dplan_flood_ensemble_town}), there appeared to be little indication that flood extents or water depths were sensitive to the erosion parameterisation, in contrast to the Boscastle simulations.
 
 %LOCATION MAP BOS
 \begin{figure}[!htbp]
@@ -279,43 +279,45 @@ The Ryedale simulations showed greater variation in flood extent between the gri
 
 \section{Discussion}
 
-The aim of this chapter was to explore how flood hydrology and flood inundation extents are sensitive to two external factors: the spatial resolution of precipitation inputs and the parameterisation of erosional processes. An ensemble simulation approach was taken using a cellular automaton landscape evolution and hydrological model to simulate two historic case studies of flash flooding events in the UK, varying several parameterisations of erosion and rainfall spatial resolution in each simulation. The results paint a complex picture of the competing controls of 1) Spatial resolution of rainfall input and 2) Erosional processes representation within the catchment.
+The aim of this chapter was to explore how modelled flood hydrology and flood inundation extents are sensitive to two external factors: the spatial resolution of precipitation inputs and the parameterisation of erosional processes. An ensemble simulation approach was taken using a cellular automaton landscape evolution and hydrological model to simulate two historic case studies of flash flooding events in the UK, varying the parameterisations of erosion and rainfall spatial resolution in each simulation. The results paint a complex picture of the competing controls of 1) Spatial resolution of rainfall input and 2) Erosional processes representation within the catchment.
 
 \subsection{Rainfall spatial resolution}
-The spatial resolution of rainfall input to the catchment exhibits a first-order control on its hydrological response during the flash flood event in both of the case studies presented here. Hydrographs from the Ryedale simulations were noticeably different in the prediction of the magnitude and timing of peak discharges, although in the smaller Boscastle catchment the differences in hydrological response were more muted, both in terms of the difference in timing of the peak flow and the peak water discharge rate. There are size differences between the two catchments studied -- the Ryedale catchment (270 km\(^2\)) is an order of magnitude larger in area than Boscastle (18 km\(^2\)) -- and such differences in catchment size have previously (although not conclusively) been argued to control the sensitivity of catchments to spatial variability in rainfall inputs \citep{krajewski1991monte,nicotina2008impact}. While it has been argued that smaller catchments up to around 3500 km\(^2\) are largely insensitive to spatial heterogeneity in rainfall input \citep{nicotina2008impact}, the results in this study suggest that rainfall input resolution may influence the flood response of smaller basins, around 250 km\(^2\) in size during intense rainfall events. For each simulation using gridded rainfall input, the cell width of the rainfall grid is 1 km. The relative amount of increase in rainfall detail between uniform and gridded simulations is much greater in the larger Ryedale catchment than the Boscastle catchment. By using a 1 km gridded rainfall product as input data, the Ryedale simulation potentially captures 15 times more rainfall heterogeneity compared to the respective Boscastle simulation, by virtue of it simply being a much larger catchment with a greater number of rainfall input cells. The results from this study support the general consensus that there is some degree of sensitivity in catchment hydrology to rainfall spatial inputs, but in contrast to other studies, suggests that such sensitivity may be observed in much smaller catchments than previously thought. The results here potentially offer some explanation to other findings that over longer timescales, hydrological outputs from catchments simulated with spatially variable rainfall input data can see significant increases in mean annual discharge \citep{coulthard2016sensitivity} in smaller catchments. If individual events can show notable differences in hydrological outputs, over time this will lead to larger differences in mean annual discharges. The general idea of catchment-size sensitivity to rainfall inputs is not disputed, but there is still a lack of consensus at what spatial scale this becomes an dominating factor. 
+The spatial resolution of rainfall input to the catchment exhibits a first-order control on its hydrological response during the flash flood event in both of the case studies presented here. Hydrographs from the Ryedale simulations were noticeably different in the prediction of the magnitude and timing of peak discharges, although in the smaller Boscastle catchment the differences in hydrological response were more muted, both in terms of the difference in timing of the peak flow and the peak water discharge rate. There are size differences between the two catchments studied -- the Ryedale catchment (270 km\(^2\)) is an order of magnitude larger in area than Boscastle (18 km\(^2\)) -- and such differences in catchment size have previously (although not conclusively) been argued to control the sensitivity of catchments to spatial variability in rainfall inputs \citep{krajewski1991monte,nicotina2008impact}. While it has been argued that smaller catchments up to around 3500 km\(^2\) are largely insensitive to spatial heterogeneity in rainfall input \citep{nicotina2008impact}, the results in this study suggest that rainfall input resolution may influence the flood response of smaller basins, around 250 km\(^2\) in size during intense rainfall events. For each simulation using gridded rainfall input, the cell width of the rainfall grid is 1 km. The relative amount of increase in rainfall detail between uniform and gridded simulations is potentially much greater in the larger Ryedale catchment than the Boscastle catchment. By using a 1 km gridded rainfall product as input data, the Ryedale simulation potentially captures 15 times more rainfall heterogeneity compared to the respective Boscastle simulation, by virtue of it simply being a much larger catchment with a greater number of rainfall input cells. The results from this study support the general consensus that there is some degree of sensitivity in catchment hydrology to rainfall spatial inputs, but in contrast to other studies, suggests that such sensitivity may be observed in much smaller catchments than previously thought. Furthermore, the flood inundation model used in this study appears to be more sensitive to spatial heterogeneity in rainfall inputs than it is to erosional parameterisation within the model, which may extend to hydrological modelling and flood forecasting in general. Further studies with different numerical models and different rainfall events would be needed to confirm this. 
 
-A further aim of this study was to investigate whether spatially detailed rainfall data leads to more accurate hydrological predictions, not merely \textit{different} predictions. Where available, measurements of the timing, magnitude, and spatial distribution of flood inundation were compared with the predictions made by the numerical model. Both the Ryedale and Boscastle events were extensively studied and surveyed in their aftermath and comparisons with previous modelling studies of each event were made where these were available. The results with respect to aim of improving  the accuracy of flood inundation predictions were mixed. There was better agreement with the peak discharges published in the \citep{wallingford2005flooding} report when using the gridded rainfall input to drive the numerical model, though a limitation of this comparison is that the hydrographs published in the HR Wallingford report were themselves based on estimates from eyewitness observations, reconstructions from water-level marks, and one-dimensional hydraulic modelling. 
+The findings here potentially offer some explanation to other other studies that have shown over longer timescales, hydrological outputs from catchments simulated with spatially variable rainfall input data can see significant increases in mean annual discharge \citep{coulthard2016sensitivity}. If individual events can show notable differences in hydrological outputs, over time this will lead to larger differences in mean annual discharges. The general idea of catchment-size sensitivity to rainfall inputs is not challenged, but there is still a lack of consensus at what spatial scale this becomes an dominating factor. These findings suggest that catchments smaller in size than previously thought are also sensitive to rainfall spatial heterogeneity.
 
-In the Ryedale case study, using gridded rainfall input actually produced a worse prediction of the peak discharge during the flood, though the only comparison available was made with a single gauge station at the catchment outlet -- gauging station data can be unreliable during extreme flows and this may partly explain the discrepancy. In this case the uniform rainfall data actually gave a better hydrological prediction in terms of matching the timing and rate of peak discharge during the flood. 
+A further aim of this study was to investigate whether spatially detailed rainfall data leads to more accurate hydrological predictions, not merely \textit{different} predictions. Where available, measurements of the timing, magnitude, and spatial distribution of flood inundation were compared with the predictions made by the numerical model. Both the Ryedale and Boscastle events were extensively studied and surveyed in their aftermath and comparisons with previous modelling studies of each event were made where these were available. With respect to aim of improving the accuracy of flood inundation predictions with high-resolution rainfall data, the results were mixed. For the Boscastle case study there was better agreement with the peak discharges published in the \citep{wallingford2005flooding} report when using the gridded rainfall input to drive the numerical model, though a limitation of this comparison is that the hydrographs published in the HR Wallingford report were themselves based on estimates from eyewitness observations, reconstructions from water-level marks, and one-dimensional hydraulic modelling. Nonetheless, the better agreement with other published findings is encouraging for the case of using high-resolution rainfall data in hydrological models.
+
+In the Ryedale case study, using gridded rainfall input actually produced a less accurate prediction of the peak discharge during the flood, though the only comparison available was made with a single gauge station at the catchment outlet -- gauging station data can be unreliable during extreme flows and this may partly explain the discrepancy. In this case the uniform rainfall data actually gave a better hydrological prediction in terms of matching the timing and rate of peak discharge during the flood. 
 
 % More on the m value, equifinality, Welsh study 2009.
 \subsection{Choice of \(m\) parameter value}
-The sensitivity analysis of the model \(m\) parameter was initially done using one type of rainfall input (spatially uniform) for the Ryedale catchment and the value of \(m\) that most closely matched published hydrographs (\(m = 0.005\)) was used for all of the simulations laid out in Table \ref{table_ensemble_experiments}. Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is frequently encountered modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are with reasonable ranges for the types of environment simulated \citep{beven1984testing}, but the choice of value one over the other can be used to support the case for using spatially detailed gridded rainfall inputs into hydrological models. Does one chose to calibrate the model based on the type of rainfall input as well, and if so, should it be calibrated further based on the type of erosional parametrisation enabled in the model. The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated.
+The sensitivity analysis of the model \(m\) parameter was initially done using one type of rainfall input (spatially uniform) for the Ryedale catchment and the value of \(m\) that most closely matched published hydrographs (\(m = 0.005\)) was used for all of the simulations laid out in Table \ref{table_ensemble_experiments}. Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is frequently encountered modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are with reasonable ranges for the types of environment simulated \citep{beven1984testing}, but depending on the choice of \(m\) value, the case for using spatially variable rainfall inputs can be either strengthed or weakened. Does one chose to calibrate the model based on the type of rainfall spatial input as well, and if so, should it be calibrated further based on the type of erosional parametrisation enabled in the model? The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated. Comprehensively answering these questions of model calibration is beyond the scope of this study, but a strong recommendation can be made for future studies using the TOPMODEL-based runoff generation in models to more rigorously assess the sensitivity to the \(m\) parameter.
 
 % Discussion on erosional parameterisation.
 \subsection{Erosional parameterisation}
-The results of the numerical modelling simulations suggested that choice of erosional parameterisation exerts a secondary control on the hydrological response of a catchment when compared to the effects of the choice in rainfall resolution input. Consistently across simulations, the enabling of a transport-limited erosion parameterisation in the numerical model resulted in higher predicted peak discharges, evident in both the gridded rainfall and uniform rainfall sets of simulations. Again, the size of the catchment appears to be a factor in determining the degree of sensitivity, with the differences in hydrological output greater in the larger Ryedale catchment according to the choice of erosional parameterisation. The differences in discharge, however, are relatively smaller in both cases and any change in discharge from varying the choice of erosion law is surpassed by switching to a gridded rainfall input source. 
+The results of the numerical modelling simulations suggested that choice of erosional parameterisation exerts a secondary control on the hydrological response of a catchment when compared to the effects of the choice in rainfall resolution input. Consistently across simulations, the enabling of a transport-limited (\texttt{TLIM}) erosional parameterisation in the HAIL-CAESAR model resulted in higher predicted peak discharges, evident in both the gridded rainfall and uniform rainfall sets of simulations. Again, the size of the catchment appears to be a factor in determining the degree of sensitivity, with the differences in hydrological output greater in the larger Ryedale catchment when using erosion-enabled simulations. The differences in discharge, however, are relatively smaller in both cases and any change in discharge from varying the choice of erosion law is surpassed by using a gridded rainfall input source over a spatially uniform one.
 
-The same limited sensitivity to erosional parameterisation is noted by \citep{wong2015sensitivity}, using a similar hydraulic model to investigate flood inundation sensitivity to channel morphological change during flood events. The hydraulic model used in the \citet{wong2015sensitivity} study is based on the same two-dimensional flood inundation model used in HAIL-CAESAR, coupled with a simple erosional model that allows the channel bed elevation to be eroded (but no sediment deposited) during the course of a flood. The authors of the study note that differences in hydrological response are minimal during erosion-enabled simulations, though there is a small increase of up to 5\% in the simulated mean depth of floodwaters throughout the event they simulate. By contrast, the results presented here show that floodwater depths on average are lower in erosion-enabled simulations. The erosion-enabled simulations presented in this chapter address a limitation in the previous study in that they permit the redistribution of sediments within a catchment through depositional as well as erosional processes.  In theory, such a model could capture channel blockage from sediment build up or infill during a flood, though this behaviour is not immediately apparent from the simulations carried out for these case studies. However, considering the sets of gridded-and uniform-rainfall input simulations separately, the predicted mean water depths in the main channel of each catchment (Figure \ref{fig_channel_depth_ensemble}), are lower in the erosion-enabled simulations. In the Boscastle simulations, the mean water depths are as much as 1 metre lower in the transport-limited erosion-enabled simulations than the corresponding hydrology-only simulations where the morphology of the channel bed and floodplain are effectively fixed. Average floodplain water depths are also lower in the erosion-enabled Boscastle simulations (Figure \ref{fig_floodplain_depth_ensemble}). 
+The same limited sensitivity to erosional parameterisation is noted by \citep{wong2015sensitivity}, using a similar hydraulic model to investigate flood inundation sensitivity to channel morphological change during flood events. The hydraulic model used in the \citet{wong2015sensitivity} study is based on the same two-dimensional flood inundation model used in HAIL-CAESAR, coupled with a simple erosional model that allows the channel bed elevation to be eroded (but no sediment deposited) during the course of a flood. The authors of the study note that differences in hydrological response are minimal during erosion-enabled simulations, though there is a small increase of up to 5\% in the simulated mean depth of floodwaters throughout the event they simulate. By contrast, the results presented here show that floodwater depths on average are lower in erosion-enabled simulations. The erosion-enabled simulations presented in this chapter address a limitation in the \citet{wong2015sensitivty} study in that they permit the redistribution of sediments within a catchment through depositional as well as erosional processes.  In theory, such a model could capture channel blockage from sediment build up or infill during a flood, though this behaviour is not immediately apparent from the simulations carried out for these case studies. However, considering the sets of gridded-and uniform-rainfall input simulations separately, the predicted mean water depths in the main channel of each catchment (Figure \ref{fig_channel_depth_ensemble}) are lower in the erosion-enabled simulations indicating that sediment infill of the channels has taken place and reduced water depths in the channels. In the Boscastle simulations, the mean water depths are as much as 1 metre lower in the transport-limited erosion-enabled simulations than the corresponding hydrology-only simulations where the morphology of the channel bed and floodplain are effectively fixed. Average floodplain water depths are also lower in the erosion-enabled Boscastle simulations (Figure \ref{fig_floodplain_depth_ensemble}). An alternative explanation for the lower water depths seen in the erosion-enable simulations is that the coarse model output time step (two-hourly) simply did not capture the exact timing of peak flood water extent, and so the recorded depths for the erosion-enabled simulations are near to, but not quite at the peak of flood inundation.
 
-In models that permit the channel to be lowered through erosional processes, but no sediment deposition to take place, the channel and floodplain capacity to store or transport water can only be increased during the flood \citep[e.g.][]{wong2015sensitivity}. The effect of this could either be to increase the rate of water transport downstream through the channels to the floodplains, or to increase the channels capacity to store water during the course of the flood. In the \citet{wong2015sensitivity} study the case seems to have been that water depths have increased on floodplain. In models that permit both channel erosion and sediment deposition, it the possibility arises that channel capacity is reduced during the flood through the deposition of sediments in the channel after being transported from elsewhere in the catchment. However, detailed observational evidence recorded after the Boscastle event tends not to support this hypothesis as the amount of floodplain deposited sediments was on the order of centimetres, and most sections of the channel were noted as having undergone net incision through erosion, rather than deposition. In any case, a detailed analysis of the change in channel carrying capacity was beyond the scope of this study, but it is offered as a potential explanation for some of the differences seen between the \citet{wong2015sensitivity} study and the results of this analysis. A further explanation for the general lack of sensitivity of hydraulic models to morphological changes to the channel and floodplain during large floods is that the channel and floodplain act as a single channel unit \citep{bates2005numerical}, and so localised changes to one hydromorphic feature are compensated for by the other, in effect dampening any potential hydrological sensitivity to erosional processes.
+In models that permit the channel to be lowered through erosional processes, but no sediment deposition to take place, the channel and floodplain capacity to store or transport water can only be increased during the flood \citep[e.g.][]{wong2015sensitivity}. The effect of this could either be to increase the rate of water transport downstream through the channels to the floodplains, or to increase the channel capacity to store water during the course of the flood. In the \citet{wong2015sensitivity} study the case seems to have been that water depths have increased on floodplain when erosion was enabled in their model. In models that permit both channel erosion and sediment deposition,  the possibility arises that channel capacity is reduced during the flood through the deposition of sediments in the channel. However, detailed observational evidence recorded after the Boscastle event tends not to support this hypothesis as the amount of floodplain deposited sediments was on the order of centimetres, and most sections of the channel were noted as having undergone net incision rather than deposition. In any case, a detailed analysis of the change in channel carrying capacity was beyond the scope of this study, but it is offered as a potential explanation for some of the differences seen between the \citet{wong2015sensitivity} study and the results of this analysis. A further explanation for the general lack of hydrological sensitivity to morphological changes to the channel and floodplain during large floods is that the channel and floodplain act as a single channel unit \citep{bates2005numerical}, and so localised changes to one hydromorphic feature are compensated for by the other, in effect dampening any potential hydrological sensitivity to erosional processes.
 
 
 %%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}  %% \conclusions[modified heading if necessary]
 %%%%%%%%%%%%%%%%%%%%%
-Considering the competing factors of spatial variation in rainfall inputs and erosional parameterisation in hydrolgical models, two main conclusions can be drawn from this investigation:
+Considering the competing factors of spatial variation in rainfall inputs and erosional parameterisation in hydrological models, two main conclusions can be drawn from this investigation:
 
 \paragraph{Rainfall resolution}
-In distributed models of catchment hydrology, rainfall input data that is spatially variable will lead to greater hydrological outputs during severe rainfall events, and the likely cause of this is that localised peaks in rainfall rate are captured by the use of high-resolution rainfall data, such as meteorological radar, that would otherwise be smoothed-out by spatially uniform rainfall inputs or coarser resolution rainfall data. This conclusion, however, assumes that rainfall structures themselves are spatially heterogeneous relative to the size of the catchment being modelled. Catchment size itself may be a controlling factor determining how sensitive the hydrological response is to spatially detailed rainfall input data, but another possible explanation is that it is the ratio of rainfall detail captured in input data, relative to the size of the catchment. A further systematic study investigating hydrological sensitivity to a range of rainfall structures of varying structural complexity would be needed to assess this hypothesis. 
+In distributed models of catchment hydrology, rainfall input data that is spatially variable is likely to lead to greater hydrological outputs during severe rainfall events, and the probable cause of this is that localised peaks in rainfall rate are captured by the use of high-resolution rainfall data, such as meteorological radar, that would otherwise be smoothed-out by spatially uniform rainfall inputs or coarser resolution rainfall data. This conclusion, however, assumes that rainfall structures themselves are spatially heterogeneous relative to the size of the catchment being modelled. Catchment size itself may be a controlling factor determining how sensitive the hydrological response is to spatially detailed rainfall input data, but another possible explanation is that it is the ratio of rainfall detail captured in input data, relative to the size of the catchment. A further systematic study investigating hydrological sensitivity to a range of rainfall structures of varying structural complexity would be needed to assess this hypothesis. 
 
-Higher resolution rainfall input data has the potential to improve the accuracy of hydrological predictions, but it is not conclusive that this is always the case based on the results of this study. For high resolution rainfall data to be of use to hydrological modellers, the other parameters within the model must be tightly constrained, either through field study (where parameters can be constrained through field measurement), detailed exploration of parameter sensitivity and calibration of the model, or a combination of both. 
+Higher resolution rainfall input data has the potential to improve the accuracy of hydrological predictions, but it is not conclusive that this is always the case based on the results of this study. For high resolution rainfall data to be of use to hydrological modellers, the other parameters within the model must be well constrained, either through field study (where parameters can be constrained through field measurement), detailed exploration of parameter sensitivity and calibration of the model, or a combination of both. 
 
 \paragraph{Erosional parameterisation}
-Hydrological simulations show some sensitivity to erosional parameterisation. The amount of change in hydrological outputs and spatial distribution of flood waters is small relative to the sensitivity to rainfall spatial representation. The conclusions in this respect are similar to that of \citet{wong2015sensitivity} in that getting an accurate representation of erosional process in hydrological models is likely to be of secondary importance compared to obtaining accurate inputs of rainfall intensity and distribution. Error in the radar-derived rainfall rate, and in the spatial distribution of rainfall is more likely to have a larger impact on model performance, compared to the nuances predicted by erosion-enabled simulations. An often reported consequence of large flood events is that bridged channels and culverts can become blocked  with mobilised debris (other than sediment), leading to localised changes in flood dynamics. Blockage of channels underneath bridges was noted in the Boscastle flood. A limitation of the HAIL-CAESAR model, and others like it, is that they cannot account for closed-channel flow and blockages from debris, but future model enhancements may enable this kind of localised change in flood hydraulics to be investigated further.
+Hydrological simulations show some sensitivity to erosional parameterisation. The amount of change in hydrological outputs and spatial distribution of flood waters is small relative to the sensitivity to rainfall spatial heterogeneity. The conclusions in this respect are similar to that of \citet{wong2015sensitivity} in that getting an accurate representation of erosional process in hydrological models is likely to be of secondary importance compared to obtaining accurate inputs of rainfall intensity and distribution. Error in the radar-derived rainfall rate, and in the radar-derived spatial distribution of rainfall is more likely to have a larger impact on model performance, compared to the nuances in flood dynamics predicted by erosion-enabled simulations. An often reported consequence of large flood events is that bridged channels and culverts can become blocked  with mobilised debris (other than sediment), leading to localised changes in flood dynamics. A limitation of the HAIL-CAESAR model, and others like it, is that they cannot account for closed-channel flow and blockages from debris, but future model enhancements may enable this kind of localised change in flood hydraulics to be investigated further.
 
 \subsubsection{Summary}
-Hydrological modelling shows measurable sensitivity to the spatial variation in rainfall input data using gridded rainfall data derived from meteorological radar. Sensitivity is more pronounced in larger catchments, though it is also noticeable in smaller catchments during extreme flood events, contrary to previously published studies. Whether or not high-resolution  rainfall data can improve hydrological model performance depends on the constraint of other model parameters, notably the \(m\) parameter, that can lead to large amounts of uncertainty in the hydrological response of a catchment to intense rainfall. Erosional parameterisation within a hydrological model -- the ability to represent changes in channel and floodplain morphology during a flash flood event -- appears to be of only secondary importance in determining the hydrological response based on the studies carried out in this investigation. Nonetheless, both erosional parameterisation and spatial distribution of rainfall remain important factors to be considered in future models of flood inundation and catchment hydrology.
+Hydrological modelling shows measurable sensitivity to the spatial variation in rainfall inputs using gridded rainfall data derived from meteorological radar. Sensitivity is more pronounced in larger catchments, though it is also noticeable in smaller catchments during extreme flood events, contrary to previously published studies. Whether or not high-resolution  rainfall data can improve hydrological model performance depends on the constraint of other model parameters, notably the \(m\) parameter, that can lead to large amounts of uncertainty in the hydrological response of a catchment to intense rainfall. Erosional parameterisation within a hydrological model -- the ability to represent changes in channel and floodplain morphology during a flash flood event -- appears to be of only secondary importance in determining the hydrological response based on the studies carried out in this investigation. Nonetheless, both erosional parameterisation and spatial distribution of rainfall remain important factors to be considered in future models of flood inundation and catchment hydrology.
 
 
 
